--- a/app/src/main/res/layout/music_view.xml
+++ b/app/src/main/res/layout/music_view.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@android:color/background_dark"
     tools:context="com.musicarray.codeclan.musicarrayadapterhw.MusicActivity">
 
     <TextView
         android:id="@+id/information"
-        android:layout_width="342dp"
-        android:layout_height="119dp"
+        android:layout_width="322dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -19,12 +20,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.021" />
+        app:layout_constraintVertical_bias="0.017" />
 
     <TextView
         android:id="@+id/album_year"
         android:layout_width="322dp"
-        android:layout_height="62dp"
+        android:layout_height="28dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -35,4 +36,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/information"
         app:layout_constraintVertical_bias="0.017" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="322dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/album_year"
+        app:layout_constraintVertical_bias="0.045" />
 </android.support.constraint.ConstraintLayout>
